<resources>
    <string name="app_name">SkiBuddy</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_logout">Logout</string>
    <string name="action_update">Update Profile</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard_actiity">DashboardActiity</string>
    <string name="title_activity_ski_tracker">SkieTracker</string>
    <string name="title_activity_create_event">CreateEvent</string>
    <string name="title_activity_display_record">Record</string>
    <string name="title_activity_user_details">User Details</string>

    <!-- activity_display_record strings -->
    <string name="display_record_record_name">Record Name:</string>
    <string name="display_record_event_name">Event Name:</string>
    <string name="display_record_distance_covered">Distance Covered:</string>
    <string name="display_record_total_time">Total Time:</string>
    <string name="display_record_path">Path:</string>

    <!-- activity_ski_tracker strings -->
    <string name="ski_tracker_start_button">Start</string>
    <string name="ski_tracker_stop_button">Stop</string>
    <string name="ski_tracker_distance_covered">Distance Covered:</string>
    <string name="ski_tracker_distance_covered_value">0 meter</string>
    <string name="ski_tracker_total_time">Total Time:</string>
    <string name="ski_tracker_total_time_value">00:00:00</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="ski_tracker_display_user_location">Display Location</string>

    <!-- activity_event_details strings -->
    <string name="event_details_event_name">Event Name:</string>
    <string name="event_details_event_description">Event Description:</string>
    <string name="event_details_start_time">Start Time:</string>
    <string name="event_details_end_time">End Time:</string>
    <string name="event_details_event_participants">Event Participants:</string>

    <!-- fragment_profile strings -->
    <string name="fagment_profile_participated_events">Participated Events:</string>

    <!-- activity_user_location strings -->
    <string name="user_location_activity_your_location">Your Location</string>
    <string name="user_location_activity_user_location">User Location</string>
    <string name="title_activity_user_location">User Location</string>

</resources>
