<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#4169E1"
    tools:context="com.cmpe277.skibuddy.SkiTrackerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10sp"
        android:gravity="center">

        <Button
            android:id="@+id/startButton"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_alignParentTop="false"
        android:background="@mipmap/start"
            />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:background="@mipmap/stop"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20sp"
        android:paddingTop="50dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="top"
            android:padding="10sp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingLeft="2sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:text="@string/ski_tracker_distance_covered" />

            <TextView
                android:id="@+id/textDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingLeft="2sp"
                android:textColor="#ffffff"
                android:text="@string/ski_tracker_distance_covered_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10sp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:paddingLeft="2sp"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:text="@string/ski_tracker_total_time" />

            <TextView
                android:id="@+id/textTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:paddingLeft="2sp"
                android:text="@string/ski_tracker_total_time_value" />
        </LinearLayout>

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/map"
            tools:context="com.cmpe277.skibuddy.SkiTrackerActivity"
            android:layout_alignParentBottom="true"
            android:name="com.google.android.gms.maps.SupportMapFragment" />
    </LinearLayout>

</RelativeLayout>
