<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cmpe277.skibuddy.EventDetailsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/subscribeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/edit_style"
            android:padding="15dp"
            android:text="Subscribe" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/unsubscribeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/edit_style"
                android:padding="15dp"
                android:layout_weight="0.5"
                android:text="Unsubscribe" />

            <Button
                android:id="@+id/addParticipantButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/edit_style"
                android:padding="15dp"
                android:layout_weight="0.5"
                android:text="Add Participant" />
        </LinearLayout>

        <Button
            android:id="@+id/skiTrackerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@drawable/edit_style"
            android:padding="15dp"
            android:text="SkiTracker" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="120dp"
                android:textSize="12sp"
                android:paddingLeft="2sp"
                android:textStyle="bold"
                android:text="@string/event_details_event_name" />

            <TextView
                android:id="@+id/textEventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingLeft="2sp"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="120dp"
                android:textSize="12sp"
                android:paddingLeft="2sp"
                android:textStyle="bold"
                android:text="@string/event_details_event_description" />

            <TextView
                android:id="@+id/textEventDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingLeft="2sp"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="120dp"
                android:textSize="12sp"
                android:paddingLeft="2sp"
                android:textStyle="bold"
                android:text="@string/event_details_start_time" />

            <TextView
                android:id="@+id/textStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingLeft="2sp"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="120dp"
                android:textSize="12sp"
                android:paddingLeft="2sp"
                android:textStyle="bold"
                android:text="@string/event_details_end_time" />

            <TextView
                android:id="@+id/textEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:paddingLeft="2sp"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="120dp"
                android:textSize="12sp"
                android:paddingLeft="2sp"
                android:textStyle="bold"
                android:text="@string/event_details_event_participants" />

        </LinearLayout>

        <ListView
            android:id="@+id/participantslistView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="#F5F6CE">
        </ListView>


    </LinearLayout>

</ScrollView>
